--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="article-right">
             <article>
-                <img src="https://think.storage.googleapis.com/images/winning-omni-channel-shoppers-micro-moments-bn.jpg">
+                <img src="https://think.storage.googleapis.com/images/winning-omni-channel-shoppers-micro-moments-bn.jpg" alt="cross-road">
                 <div>
                     <h1><a href="#">Video Micro-Moments: What Do They Mean for Your Video Strategy?</a></h1>
                     <ul class="tags">
@@ -36,7 +36,7 @@
                 </div>
             </article>
             <article>
-                <img src="https://think.storage.googleapis.com/images/video-micro-moments-what-do-they-mean-for-your-video-strategy-lg.jpg">
+                <img src="https://think.storage.googleapis.com/images/video-micro-moments-what-do-they-mean-for-your-video-strategy-lg.jpg" alt="makeup">
                 <div>
                     <h1><a href="#">Winning Omni-Channel Shoppers in Their Micro-Moments</a></h1>
                     <ul class="tags">
@@ -49,7 +49,7 @@
     <div class="bottomContainer">
         <div class="region-main">
             <article>
-                <img src="https://think.storage.googleapis.com/images/mm_betterstrategy_454x255.png" />
+                <img src="https://think.storage.googleapis.com/images/mm_betterstrategy_454x255.png" alt="Strategy-Icon"/>
                 <div>
                     <h1>Titre de l'article</h1>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
@@ -59,7 +59,7 @@
                 </div>
             </article>
             <article>
-                <img src="https://think.storage.googleapis.com/images/micro-moments-shopper-journey-report-harvard-business-review-1-sm.jpg" />
+                <img src="https://think.storage.googleapis.com/images/micro-moments-shopper-journey-report-harvard-business-review-1-sm.jpg" alt="Stat-Icon"/>
                 <div>
                     <h1>Titre de l'article</h1>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
@@ -69,7 +69,7 @@
                 </div>
             </article>
             <article>
-                <img src="https://think.storage.googleapis.com/images/how-moms-use-youtube-videos-new-trends-and-insights-sm-1.jpg" />
+                <img src="https://think.storage.googleapis.com/images/how-moms-use-youtube-videos-new-trends-and-insights-sm-1.jpg" alt="Followup"/>
                 <div>
                     <h1>Titre de l'article</h1>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
@@ -108,4 +108,5 @@
     </div>
 	<div class="region-footer">
 	</div>
-</body></html>
+</body>
+</html>
